--- a/MealPlanner.Web/Views/Shared/_Layout.cshtml
+++ b/MealPlanner.Web/Views/Shared/_Layout.cshtml
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Maaltijd planner</title>
-
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
-     
-</head>
-
+</head> 
 <body>
     @RenderBody()
 
