--- a/MealPlanner.Web/ClientApp/css/site.css
+++ b/MealPlanner.Web/ClientApp/css/site.css
@@ -7,17 +7,17 @@
     .tagCollection li,
     .ingredientsCollection li {
         display: inline-block;
-        background-color: #aaa;
+        border-radius: .25rem;
+        background-color: #81c8d4;
         padding: 0.25% 2.5%;
         margin: 0.25% 0.5%;
         font-variant: small-caps;
         cursor: pointer;
-        font-weight: bold;
+        color: #fff;
     }
         .tagCollection li a,
         .ingredientsCollection li a {
-            border: 0px solid black;
-            background-color: #aaa;
+            border: 0px solid black; 
             color: #333;
             padding: 1px 4px;
             position: inline-block;
@@ -26,6 +26,10 @@
   {
       width: 100%;
   }
-  html, body {
-      width: 100%;
-  }
+.btn-primary {
+    background-color: #2595a0;
+    border: 0px ;
+}
+.modal {
+    display: block;
+}
