--- a/MealPlanner.Web/Views/Shared/_Layout.cshtml
+++ b/MealPlanner.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Maaltijd planner</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="/favicon.png" type="image/png" />
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
 </head> 
 <body>
