Switched out cookies for JWT

--- a/MealPlanner.Web/Views/Home/Index.cshtml
+++ b/MealPlanner.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-@{ ViewData["Title"] = "Home Page"; }
+@{ ViewData["Title"] = "Meal planner"; }
 <div id="app"></div> 
 @section scripts {
     <script src="~/dist/main.js" asp-append-version="true"></script>
