Upgrade to core 2.2 and pwa improvements

--- a/MealPlanner.Web/ClientApp/css/site.css
+++ b/MealPlanner.Web/ClientApp/css/site.css
@@ -106,3 +106,8 @@ a {
     background: #DEDEDE;
     box-shadow: none;
 }
+
+body {
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
