--- a/MealPlanner.Web/Views/Shared/_Layout.cshtml
+++ b/MealPlanner.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,9 @@
     <link rel="manifest" href="~/dist/manifest.json">
 
     <meta name="theme-color" content="#88B337">
+    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="apple-touch-startup-image" href="launch.png">
+
 </head> 
 <body>
     <noscript>
