Minor layout change

--- a/MealPlanner.Web/Views/Shared/_Layout.cshtml
+++ b/MealPlanner.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="/favicon.png" type="image/png" />
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
     <link rel="manifest" href="~/dist/manifest.json">
+    <meta name="mobile-web-app-capable" content="yes">
+
 
     <meta name="theme-color" content="#88B337">
     <link rel="apple-touch-icon" href="icon.png">
